# WordToVec-CPP

./: .gitignore  CMakeLists.txt  Iteration.cpp  Iteration.h  NeuralNetwork.cpp  NeuralNetwork.h  README.md  TestWordToVec.cpp  Vocabulary.cpp  Vocabulary.h  VocabularyWord.cpp  VocabularyWord.h  WordToVecParameter.cpp  WordToVecParameter.h  conanfile.py
Test/: NeuralNetworkTest.cpp  SemanticDataSetTest.cpp
include/: Dictionary.h  Matrix.h  VectorizedDictionary.h  VectorizedWord.h
src/: CMakeLists.txt  Iteration.cpp  Iteration.h  NeuralNetwork.cpp  NeuralNetwork.h  SemanticDataSet.cpp  SemanticDataSet.h  Vocabulary.cpp  Vocabulary.h  VocabularyWord.cpp  VocabularyWord.h  WordPair.cpp  WordPair.h  WordToVecParameter.cpp  WordToVecParameter.h
